# Elice_DevOps_Engineer_Mini_Project

./: .gitignore  Elice_AWS_DevOps_Project_Report.md  Elice_DevOps_Project_Report.md  Jenkinsfile  Jenkinsfile.promotion  README.md  cicd-pipeline-complete-guide.md  fix-registry-access.sh  jenkins-setup.md  troubleshoot-image-pull.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
aws/microservices/: bulk-apply-lifecycle.sh  docker-compose.monitoring.yml  docker-compose.yml  docker-management.sh  ecr-push.sh  generate_python_services.py  image-tagging-strategy.yml  init-db.sql  optimize_dockerfiles.py  setup-ecr-lifecycle.sh
aws/microservices/api-gateway/: Dockerfile  Dockerfile.optimized  pyproject.toml  requirements.txt
aws/microservices/api-gateway/api_gateway/: main.py
aws/terraform/: Makefile  main.tf  outputs.tf  provider.tf  terraform.tfvars.dev  terraform.tfvars.prod  terraform.tfvars.stg  variables.tf
docs/: jenkins-pipeline-documentation.md
environments/production/: values.yaml
jenkins/: 00-namespace.yaml  01-rbac.yaml  02-storageclass.yaml  03-pvc.yaml  04-configmap.yaml  05-deployment.yaml  06-service.yaml  Dockerfile  jenkins-test-pipeline.groovy  jenkins.yaml  microservice-build-pipeline.groovy  microservice-build-v2.groovy  microservice-build-working.groovy  microservice-gitops-pipeline.groovy  microservice-hardcoded.groovy  minimal-param-test.groovy  plugins.txt  simple-test-pipeline.groovy
scripts/: health-check.sh  jenkins-gitops-integration.sh  jenkins-pipeline-fix.sh  setup-github-integration.sh
(+100 files in other folders)
